--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-<title>モード選択</title>
+<title>できること三通</title>
 <style>
   :root{ --bg:#0b0f14; --txt:#e6f0ff; --a:#4f8cff; --b:#22c55e; --c:#f59e0b; }
   *{ box-sizing:border-box }
@@ -44,7 +44,7 @@
 </script>
 </head>
 <body>
-  <main class="wrap" role="navigation" aria-label="モード選択">
+  <main class="wrap" role="navigation" aria-label="できること三通">
     <a class="btn a" href="./scan-spec.html"     aria-label="調べる">調べる</a>
     <a class="btn b" href="./scan-lookup.html"   aria-label="探す">型を探す</a>
     <a class="btn c" href="./scan-register.html" aria-label="登録する">型の保管場所を記録</a>
