--- a/public/index.html
+++ b/public/index.html
@@ -44,10 +44,10 @@
 </script>
 </head>
 <body>
-  <main class="wrap" role="navigation" aria-label="できること三通">
-    <a class="btn a" href="./scan-spec.html"     aria-label="調べる">調べる</a>
-    <a class="btn b" href="./scan-lookup.html"   aria-label="探す">型を探す</a>
-    <a class="btn c" href="./scan-register.html" aria-label="登録する">型の保管場所を記録</a>
+  <main class="wrap" role="navigation" aria-label="できること三つ">
+    <a class="btn a" href="./scan-spec.html"     aria-label="調べる">知る</a>
+    <a class="btn b" href="./scan-lookup.html"   aria-label="探す">見つける</a>
+    <a class="btn c" href="./scan-register.html" aria-label="登録する">片づける</a>
   </main>
 
 <script>
